add new user manage feature

--- a/python_cert_gen/web_version/templates/show_link.html
+++ b/python_cert_gen/web_version/templates/show_link.html
@@ -32,5 +32,6 @@
     <h1>Download link</h1>
     <p>This download link will only avaiable for 3 days.</p>
     <p>{{ url }}</p>
+    <p>Password: {{ otp }}</p>
 </body>
 </html>
