--- a/python_cert_gen/web_version/templates/user_list.html
+++ b/python_cert_gen/web_version/templates/user_list.html
@@ -33,57 +33,39 @@
                 <a class="nav-link text-dark" href="{{ url_for('index')}}">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-dark active" href="{{ url_for('csr_list')}}">CSR List</a>
+                <a class="nav-link text-dark" href="{{ url_for('csr_list')}}">CSR List</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-dark" href="{{ url_for('user_list')}}">User List</a>
+                <a class="nav-link text-dark active" href="{{ url_for('user_list')}}">User List</a>
             </li>
         </ul>
     </div>
 
     <div class="container">
+        <a style="text-align: center;" href="{{ url_for('add_user') }}">
+            <button type="button" class="btn btn-success">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill-add" viewBox="0 0 16 16">
+                    <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7Zm.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0Zm-2-6a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"/>
+                    <path d="M2 13c0 1 1 1 1 1h5.256A4.493 4.493 0 0 1 8 12.5a4.49 4.49 0 0 1 1.544-3.393C9.077 9.038 8.564 9 8 9c-5 0-6 3-6 4Z"/>
+                  </svg>
+                Add User
+            </button>
+        </a>
         <table class="table table-striped table-hover table-sm">
             <thead>
                 <tr>
-                    <th>Request Name</th>
-                    <th>Common Name</th>
-                    <th>Environment</th>
+                    <th>User Name</th>
                     <th>Date</th>
-                    <th>CSR</th>
-                    <th>CNF</th>
-                    <th>Key</th>
+
                 </tr>
             </thead>
             <tbody>
-                {% for row in csr_data %}
+                {% for row in users_data %}
                 <tr>
                     <td>{{ row[1] }}</td>
                     <td>{{ row[2] }}</td>
-                    <td>{{ row[3] }}</td>
-                    <td>{{ row[4] }}</td>
                     <td>
-                        <a href="{{ url_for('download_file', csr_id=row[0], type='csr') }}">
-                            <button type="button" class="btn btn-success">
-                                Download
-                            </button>
-                        </a>
-                    </td>
-                    <td>
-                        <a href="{{ url_for('download_file', csr_id=row[0], type='cnf') }}">
-                            <button type="button" class="btn btn-success">
-                                Download
-                            </button>
-                        </a>
-                    </td>
-                    <td>
-                        <a href="{{ url_for('generate_link', csr_id=row[0], type='key') }}">
-                            <button type="button" class="btn btn-primary">
-                                Generate
-                            </button>
-                        </a>
-                    </td>
-                    <td>
-                        <a href="{{ url_for('delete_csr', csr_id=row[0]) }}">
+                        <a href="{{ url_for('delete_user', user_id=row[0]) }}">
                             <button type="button" class="btn btn-outline-danger">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     class="bi bi-trash" viewBox="0 0 16 16">
